# orient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  orieConfig.cmake.in
docs/: TODO.md  lib_overview.md  predicates.md  trigram_design.md
include/orient/: app.hpp
include/orient/fs/: data_iter.hpp  dumper.hpp  predef.hpp  trigram.hpp
include/orient/fs_pred_tree/: fs_expr_builder.hpp  fs_nodes.hpp
include/orient/pred_tree/: async_job.hpp  builder.hpp  excepts.hpp  node.hpp
include/orient/util/: arr2d.hpp  charconv_t.hpp  dirent_win.h  docpptxls_to_text.h  fifo_thpool.hpp  file_mem_chunk.hpp  stringconv_t.hpp
include/orient/util/compresslib/: bitpacking.h  bitpackinghelpers.h  codecs.h  common.h  compositecodec.h  delta.h  fastpfor.h  integratedbitpacking.h  intersection.h  platform.h  util.h  variablebyte.h
src/: dirent_win.c  main.cc
src/fs/: app.cpp  data_iter.cpp  dumper.cpp  dumper_fs.cpp  dumper_mem.cpp  trigram.cpp
src/fs_pred_tree/: action_node.cpp  content_node.cpp  fs_expr_builder.cpp  in_db_node.cpp  iter_manip_node.cpp  modif_action_node.cpp  modif_node.cpp  name_node.cpp  stat_node.cpp
src/util/: arr2d.cpp  cjk_hg_freqs.c  dirent_win.c  docpptxls_to_text.c  file_mem_chunk.cpp
src/util/compresslib/: bitpacking.cpp  integratedbitpacking.cpp  intersection.cpp
test/: CMakeLists.txt  abunchofdirs.hpp  afixedbunchofdirs.hpp  test_action_node.cc  test_action_node.cpp  test_app.cc  test_arr2d.cc  test_builder.cc  test_cmprslib.cc  test_content_node.cc  test_content_node.cpp  test_dataIter.cc  test_data_iter.cc  test_dumper.cc  test_file_mem.cc  test_fs_builder.cc  test_fs_node_match.cc  test_node_base.cc  test_stat_node.cc  test_tokenize.cc  test_trigram.cc
